<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/Gray"
        android:weightSum="1"
        tools:context="com.bsdkinrobbins.baskin_robbins.MainActivity">

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"

            >

            <ImageView

                android:id="@+id/b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/b" />

            <TextView
                android:id="@+id/text_baskin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/DarkPink"
                android:fontFamily="serif-monospace"
                android:text="Baskin Robbins "
                android:textColor="@color/DarkBlue"
                android:textSize="36sp"


                />


        </LinearLayout>


        <ImageView
            android:id="@+id/bi"
            android:layout_width="wrap_content"
            android:layout_height="144dp"
            android:layout_below="@+id/linearlayout1"
            android:scaleType="centerCrop"
            android:src="@drawable/pic2" />


        <LinearLayout
            android:id="@+id/liniarlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bi"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/about_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bi"
                android:layout_margin="5dp"
                android:background="@android:color/white"
                android:padding="5dp"
                android:text="@string/about_us"
                android:textColor="@color/DarkPink"
                android:textSize="36sp"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/welcome"
                android:textColor="@color/DarkPink"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/aboutustext"
                android:textColor="@color/DarkBlue"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/liniarlayout2"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:text="@string/contact_us"

            android:textColor="@color/DarkPink"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/icon_snapchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_margin="5dp"
            android:src="@drawable/s" />

        <ImageView
            android:id="@+id/icon_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_snapchat"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/t" />

        <ImageView
            android:id="@+id/icon_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_twitter"
            android:layout_margin="5dp"
            android:src="@drawable/i" />

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_instagram"
            android:layout_margin="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/l" />

        <TextView
            android:id="@+id/text_snapchat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/contact"
            android:layout_toRightOf="@+id/icon_snapchat"
            android:text="@string/snap_baskinrobbins"
            android:textColor="@color/DarkBlue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_snapchat"
            android:layout_toRightOf="@id/icon_twitter"
            android:text="@string/twitter_baskinrobbins"
            android:textColor="@color/DarkBlue"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_twitter"
            android:layout_toRightOf="@id/icon_instagram"
            android:text="@string/instagram_baskinrobbins"
            android:textColor="@color/DarkBlue"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon_instagram"
            android:layout_toRightOf="@id/icon_location"
            android:text="@string/location_baskinrobins"
            android:textColor="@color/DarkBlue"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_location"
            android:scaleType="centerCrop"
            android:src="@drawable/pic1" />


    </RelativeLayout>
</ScrollView>